--- a/index.html
+++ b/index.html
@@ -13,7 +13,30 @@
         <canvas id="myCanvas" width="480" height="320"></canvas>
 
         <script>
-            // game logic here
+            // setting up the canvas
+            var canvas = document.getElementById("myCanvas");
+            var ctx = canvas.getContext("2d");
+
+            // test render
+            ctx.beginPath();
+            ctx.rect(20, 40, 50, 50);
+            ctx.fillStyle = "#FF0000";
+            ctx.fill();
+            ctx.closePath();
+
+            // circle test render
+            ctx.beginPath();
+            ctx.arc(240, 160, 20, 0, Math.PI*2, false);
+            ctx.fillStyle = "green";
+            ctx.fill();
+            ctx.closePath();
+
+            // stroke test render
+            ctx.beginPath();
+            ctx.rect(160, 10, 100, 40);
+            ctx.strokeStyle = "rgba(0, 0, 255, 0.5)";
+            ctx.stroke();
+            ctx.closePath();
         
         </script>
     </body>
