--- a/index.html
+++ b/index.html
@@ -17,26 +17,23 @@
             var canvas = document.getElementById("myCanvas");
             var ctx = canvas.getContext("2d");
 
-            // test render
-            ctx.beginPath();
-            ctx.rect(20, 40, 50, 50);
-            ctx.fillStyle = "#FF0000";
-            ctx.fill();
-            ctx.closePath();
+           // set up the drawing loop
+           var x = canvas.width/2;
+           var y = canvas.height-30;
+           var dx = 2;
+           var dy = -2;
+           function draw() {
+               ctx.clearRect(0, 0, canvas.width, canvas.height);
+               ctx.beginPath();
+               ctx.arc(x, y, 10, 0, Math.PI*2);
+               ctx.fillStyle = "#0095DD";
+               ctx.fill();
+               ctx.closePath();
+               x += dx;
+               y += dy;
 
-            // circle test render
-            ctx.beginPath();
-            ctx.arc(240, 160, 20, 0, Math.PI*2, false);
-            ctx.fillStyle = "green";
-            ctx.fill();
-            ctx.closePath();
-
-            // stroke test render
-            ctx.beginPath();
-            ctx.rect(160, 10, 100, 40);
-            ctx.strokeStyle = "rgba(0, 0, 255, 0.5)";
-            ctx.stroke();
-            ctx.closePath();
+           }
+           setInterval(draw, 10);
         
         </script>
     </body>
