--- a/index.html
+++ b/index.html
@@ -17,22 +17,27 @@
             var canvas = document.getElementById("myCanvas");
             var ctx = canvas.getContext("2d");
 
-           // set up the drawing loop
+           // initialize variables for ball drawing loop
            var x = canvas.width/2;
            var y = canvas.height-30;
            var dx = 2;
            var dy = -2;
-           function draw() {
-               ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+           function drawBall() {
                ctx.beginPath();
                ctx.arc(x, y, 10, 0, Math.PI*2);
                ctx.fillStyle = "#0095DD";
                ctx.fill();
-               ctx.closePath();
+               ctx.closePath;
+           }
+
+           function draw() {
+               ctx.clearRect(0, 0, canvas.width, canvas.height);
+               drawBall();
                x += dx;
                y += dy;
-
            }
+           
            setInterval(draw, 10);
         
         </script>
