--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                ctx.arc(x, y, ballRadius, 0, Math.PI*2);
                ctx.fillStyle = "#0095DD";
                ctx.fill();
-               ctx.closePath;
+               ctx.closePath();
            }
 
            function draw() {
@@ -44,7 +44,7 @@
                if(y + dy > canvas.height-ballRadius || y + dy < ballRadius) {
                    dy = -dy;    
                }
-               
+
                x += dx;
                y += dy;
 
