--- a/index.html
+++ b/index.html
@@ -24,14 +24,31 @@
            var dy = -2;
            var ballRadius = 10;
 
+           // initialize paddle variables
+           var paddleHeight = 10;
+           var paddleWidth = 75;
+           var paddleX = (canvas.width-paddleWidth)/2;
+
+           // init variables for player control
+           var rightPressed = false;
+           var leftPressed = false;
+
            function drawBall() {
                ctx.beginPath();
                ctx.arc(x, y, ballRadius, 0, Math.PI*2);
                ctx.fillStyle = "#0095DD";
                ctx.fill();
                ctx.closePath();
-           }
 
+            function drawPaddle() {
+                ctx.beginPath();
+                ctx.rect(paddleX, canvas.height-paddleHeight, paddleWidth, paddleHeight);
+                ctx.fillStyle = "#0095DD";
+                ctx.fill();
+                ctx.closePath();
+            }
+           }
+           //begin main loop
            function draw() {
                ctx.clearRect(0, 0, canvas.width, canvas.height);
                drawBall();
@@ -50,8 +67,30 @@
 
            }
            
+           // player  input event listners
+           document.addEventListener("keydown", keyDownHandler, false);
+           document.addEventListener("keyup", keyUpHandler, false);
+
+           function keyDownHandler(e) {
+               if(e.keyCode == 39) {
+                   rightPressed = true;
+               }
+               else if(e.keyCode == 37) {
+                   leftPressed = true;
+               }
+           }
+
+           function keyUpHandler(e) {
+               if(e.keyCode == 39) {
+                   rightPressed = false;
+               }
+               else if(e.keyCode == 37) {
+                   leftPressed = false;
+               }
+           }
+
            setInterval(draw, 10);
-        
+           //end main loop
         </script>
     </body>
 </html>
