--- a/index.html
+++ b/index.html
@@ -59,12 +59,20 @@
                    dx = -dx;
                }
 
-               if(y + dy > canvas.height-ballRadius || y + dy < ballRadius) {
-                   dy = -dy;    
+               if(y + dy < ballRadius) {
+                   dy = -dy;
+               }
+               else if(y + dy > canvas.height-ballRadius) {
+                   if( x > paddleX && x < paddleX + paddleWidth) {
+                       dy = -dy;
+                   }
+                   else {
+                      // alert("GAME OVER"); // alert window causes issues with reload in Chrome
+                       document.location.reload();
+                   }
                }
 
-               x += dx;
-               y += dy;
+               
 
                // paddle logic
                if(rightPressed && paddleX < canvas.width-paddleWidth) {
@@ -73,6 +81,9 @@
                else if(leftPressed && paddleX > 0) {
                    paddleX -= 7;
                }
+
+               x += dx;
+               y += dy;
 
            }
            
