--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
            var rightPressed = false;
            var leftPressed = false;
 
+           // init variables for bricks
+           var brickRowCount = 3;
+           var brickColumnCount = 5;
+           var brickWidth = 75;
+           var brickHeight = 20;
+           var brickPadding = 10;
+           var brickOffsetTop = 30;
+           var brickOffsetLeft = 30;
+
+           // init brick field array
+           // TODO - an array of objects with the x/y of each brick
+
            function drawBall() {
                ctx.beginPath();
                ctx.arc(x, y, ballRadius, 0, Math.PI*2);
@@ -64,7 +76,7 @@
                }
                else if(y + dy > canvas.height-ballRadius) {
                    if( x > paddleX && x < paddleX + paddleWidth) {
-                       dy = -dy;
+                       dy = -dy * 1.1; // ball moves faster after each time it hits the paddle
                    }
                    else {
                       // alert("GAME OVER"); // alert window causes issues with reload in Chrome
