Adding loops to generate brick coordinates and draw the brick field

--- a/index.html
+++ b/index.html
@@ -43,7 +43,13 @@
            var brickOffsetLeft = 30;
 
            // init brick field array
-           // TODO - an array of objects with the x/y of each brick
+           var bricks = [];
+           for(var c=0; c < brickColumnCount; c++) {
+               bricks[c] = []; // create sub array for each column
+               for(var r=0; r < brickRowCount; r++) {
+                   bricks[c][r] = { x: 0, y: 0};
+               }
+           }
 
            function drawBall() {
                ctx.beginPath();
@@ -59,10 +65,26 @@
                 ctx.fill();
                 ctx.closePath();
             }
+            function drawBricks() {
+                for(var c=0; c < brickColumnCount; c++) {
+                    for(var r=0; r < brickRowCount; r++) {
+                        var brickX = (c*(brickWidth+brickPadding)) + brickOffsetLeft;
+                        var brickY = (r*(brickHeight+brickPadding)) + brickOffsetTop;
+                        bricks[c][r].x = brickX;
+                        bricks[c][r].y = brickY;
+                        ctx.beginPath();
+                        ctx.rect(brickX, brickY, brickWidth, brickHeight);
+                        ctx.fillStyle = "#0095DD";
+                        ctx.fill();
+                        ctx.closePath();
+                    }
+                }
+            }
            
            //begin main loop
            function draw() {
                ctx.clearRect(0, 0, canvas.width, canvas.height);
+               drawBricks();
                drawBall();
                drawPaddle();
             
