--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
            var brickOffsetTop = 30;
            var brickOffsetLeft = 30;
 
+           var score = 0;
+
            // init brick field array
            var bricks = [];
            for(var c=0; c < brickColumnCount; c++) {
@@ -89,6 +91,7 @@
                drawBricks();
                drawBall();
                drawPaddle();
+               drawScore();
                collisionDetection();
             
                 // ball collision detection
@@ -154,10 +157,17 @@
                             if(x > b.x && x < b.x+brickWidth && y > b.y && y < b.y + brickHeight) {
                                 dy = -dy;
                                 b.status = 0;
+                                score++;
                             }
                         }
                    }
                }
+           }
+
+           function drawScore() {
+               ctx.font = "16px Arial";
+               ctx.fillStyle = "#0095DD";
+               ctx.fillText("Score: "+ score, 8, 20);
            }
 
            setInterval(draw, 10);
