Reinstated game over condition

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                        dy = -dy * 1.1; // ball moves faster after each time it hits the paddle
                    }
                    else {
-                      // alert("GAME OVER"); // alert window causes issues with reload in Chrome
+                       alert("GAME OVER"); // alert window causes issues with reload in Chrome
                        document.location.reload();
                    }
                }
