Added score to win screen

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                                 b.status = 0;
                                 score++;
                                 if(score == brickRowCount*brickColumnCount) {
-                                    alert("You win, congratulations!");
+                                    alert("Congratulations! Score: " + score + " You won with " + lives + " lives remaining!");
                                     document.location.reload();
                                 }
                             }
